code/tui/src/models/snapshots/models__picker__tests__aligned_model_effort_labels.snap
---
source: code/tui/src/models/picker_tests.rs
expression: rendered
---
"╭────────────────────────────────────────────────────────────╮"
"│ Search models                                              │"
"╰────────────────────────────────────────────────────────────╯"
"> GPT-5.6 Terra    ← ██ ██ ██ →       Medium                  "
"  GPT-5.6 Luna       ██ ██ ██ ██ ██   Medium                  "
"  GPT-5 Mini                          None                    "
"                                                              "
"                                                              "
"                                                              "
