code/tui/src/models/snapshots/models__picker__tests__missing_model_capabilities_aligned.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Search models                                                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> Model 4                                     [1m]                                                  "
"  Model 2                         [Fast off]                                                        "
"  Model 7      ██ ██ ██   Medium  [Fast off]  [1m]                                                  "
"  Model 6                         [Fast off]  [1m]                                                  "
"  Model 5      ██ ██ ██   Medium              [1m]                                                  "
"  Model 3      ██ ██ ██   Medium  [Fast off]                                                        "
"  Model 1      ██ ██ ██   Medium                                                                    "
"  Model 0                                                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
