code/tui/src/models/snapshots/models__picker__tests__model_controls_100_Chinese.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra  [加速 关]  [1m]                                                                      " Hidden by multi-width symbols: [(17, " "), (19, " "), (22, " ")]
"  GPT-4o                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
