code/tui/src/models/snapshots/models__picker__tests__model_controls_100_English.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Search models                                                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra                                                                       [Fast off]  [1m]"
"  GPT-4o                                                                            —           —   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
